--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ p {
   box-shadow: var(--box-shadow);
   color: white;
 }
+.primary-link hover {
+  color: white;
+}
 
 .secondary-link {
   border-radius: 4px;
@@ -93,7 +96,17 @@ p {
   padding: 10px;
   border-radius: 5px;
 }
-@media (max-width: 400px) {
+@media (max-width: 600px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+  h2 {
+    text-align: center;
+  }
+  p {
+    text-align: center;
+  }
   .primary-link {
     font-size: small;
   }
