--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
   margin-top: 100px;
+  margin-bottom: 50px;
 }
 
 h1,
@@ -109,5 +110,10 @@ p {
   }
   .primary-link {
     font-size: small;
+  }
+  .launch {
+    display: block;
+    text-align: center;
+    margin: 0 20px;
   }
 }
